--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -129,8 +129,10 @@ input:focus {
     transition: opacity 0.5s ease;
     margin-top: 12.5rem;
     margin-bottom: 5rem;
-    width: 100%;
-    height: 600px;
+}
+
+.swiper.visible {
+    opacity: 1;
 }
 
 .swiper .text {
@@ -138,26 +140,17 @@ input:focus {
     font-weight: 500;
 }
 
-.swiper.visible {
-    opacity: 1;
-}
-
-.swiper-wrapper {
-    width: 1000px !important;
-    left: 100px;
-}
-
 .swiper-slide {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    position: relative;
+    align-items: center;
 }
 
 .swiper img {
-    position: absolute;
-    width: 100%;
+    width: 80%;
     height: 100%;
+    max-height: 600px;
     object-fit: cover;
 }
 
@@ -170,12 +163,11 @@ input:focus {
 .info-container {
     text-align: center;
     z-index: 10;
-    width: 600px;
-    height: 150px;
+    width: 50%;
+    height: 25%;
     position: absolute;
     opacity: 0.7;
     background-color: white;
-    left: 200px;
 }
 
 .message-me {
